--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <th>Profile Pic</th>
   <th>Details</th>
   <tr>
-    <td><img src="SHUBHAM.jpg"</td>
+    <td><img src="shubhamm.png"</td>
     <td><h1> SHUBHAM MUNESHWAR</h1>
     <p><em><strong> Agriculturist🎑🎋</strong></em></p></td>
   </tr>
